<resources>
    <string name="app_name">Finger Play Game</string>
    <string name="go_to_setting_title">Permission settings</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>

    <string name="title_1">To Be The Guitar Master</string>
    <string name="title_2">Simply Guitar Tuner</string>
    <string name="title_3">Play Song You Love</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_record_audio">Record Audio permission granted</string>
    <string name="denied_record_audio">Record Audio permission granted</string>

    <string name="granted_notification">Notification permission granted</string>
    <string name="denied_notification">Notification permission denied</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="denied_storage">Storage permission denied</string>
    <string name="reject_access">Please grant storage permission to use the application</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="rate_us_ed">You\'ve already voted!</string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="not_yet_rate">Please select number of stars</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>

    <string name="please_check_your_internet">Please check your internet!</string>
    <string name="downloading">Downloading...</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rename">Rename</string>
    <string name="my_record">My Record</string>
    <string name="no_record_here">No Record Here</string>
    <string name="download_success">Download Success</string>
    <string name="are_you_sure_want_to_delete_this_record">Are you sure want to delete this record?</string>
    <string name="save">Save</string>
    <string name="file_name_cannot_be_blank">File name cannot be blank</string>
    <string name="rename_successful">Rename successful</string>
    <string name="rename_failed">Rename failed</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="pitch_shift">Pitch Shift</string>
    <string name="app_settings">App Settings</string>
    <string name="tap_to_record">Tap To Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="reverse">Reverse</string>
    <string name="record">Record</string>
    <string name="reques_storage">Please grant permission to download the file.</string>
    <string name="please_wait_until_the_download_is_successful">Please wait until the download is successful.</string>
    <string name="tap_to_stop_record">Tap To Stop Record</string>
    <string name="an_error_occurred_please_record_again">An error occurred, please record again!</string>
    <string name="please_stop_recording">Please stop recording!</string>
    <string name="please_stop_playing_sound">Please stop playing sound!</string>
    <string name="please_record_the_audio">Please record the audio!</string>
    <string name="reverse_voice">Reverse Voice</string>
    <string name="record_audio">Record Audio</string>


</resources>