<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/bg_corner_16_white_card_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/delete"
                android:textColor="@color/_555555"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/are_you_sure_want_to_delete_this_record"
                android:textColor="#99555555"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner_100_white_blue"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/no"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner_100_blue"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:paddingVertical="8dp"
                    android:text="@string/yes"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>