<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--    flOutSide-->
    <FrameLayout
        android:id="@+id/flOutSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        layoutMain-->
        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_16_stroke_gradient_solid_white"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!--            tvTitle-->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="#555555"
                android:textSize="16sp" />

            <!--            tvDescription-->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="he he"
                android:textColor="#99555555"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent">

                <!--                tvCancel-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner_100_white_blue"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/no"
                    android:textSize="16sp" />

                <!--                tvYes-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner_100_blue"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</layout>