<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_12_white_card_blue"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">
        <LinearLayout
            android:id="@+id/llRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical|start">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_rename_pop" />

            <TextView
                android:id="@+id/tv1"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/rename"
                android:textColor="@color/_555555"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="#E6E6E6" />

        <!-- mnu_download -->
        <LinearLayout
            android:id="@+id/llDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_download_pop" />

            <TextView
                android:id="@+id/tv2"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/download"
                android:textColor="@color/_555555"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="#E6E6E6" />


        <!-- mnu_delete -->
        <LinearLayout
            android:id="@+id/llDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_delete_pop" />

            <TextView
                android:id="@+id/tv3"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/delete"
                android:textColor="@color/_555555"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>