<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_FB"
    tools:context=".ui.permission.PermissionActivity">

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!-- imgPermission -->
    <ImageView
        android:id="@+id/imgPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="95dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar" />

    <!-- txtPermission -->
    <LinearLayout
        android:id="@+id/txtPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imgPermission">

        <!--                txtPer-->
        <TextView
            android:id="@+id/txtPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:paddingHorizontal="4dp"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- scvButton -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/tvContinue"
        app:layout_constraintTop_toBottomOf="@id/txtPermission">

        <LinearLayout
            android:id="@+id/layoutPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <!-- btnRecordAudio-->
            <RelativeLayout
                android:id="@+id/btnRecordAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_10_stroke_gradient_solid_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/record_audio"
                    android:textColor="#555555"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/swRecordAudio"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

            <!-- btnStorage-->
            <RelativeLayout
                android:id="@+id/btnStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_10_stroke_gradient_solid_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/storage"
                    android:textColor="#555555"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/swPermission"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

            <!-- btnNotification-->
            <RelativeLayout
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_10_stroke_gradient_solid_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/notification"
                    android:textColor="#555555"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/swNotification"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <!-- tvContinue -->
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/continue_per"
        android:textColor="@color/blue_51"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>