<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_corner_8_white_card_blue"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_music_my_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto_regular"
            android:marqueeRepeatLimit="3"
            android:singleLine="true"
            android:text="abc.com"
            android:textColor="@color/_555555"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/imv"
            app:layout_constraintEnd_toStartOf="@id/imvDot"
            app:layout_constraintStart_toEndOf="@id/imv"
            app:layout_constraintTop_toTopOf="@id/imv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvDot"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_dot"
            app:layout_constraintBottom_toBottomOf="@id/imv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/imv">

            <LinearLayout
                android:id="@+id/llPlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/imv_play_my_record" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/play"
                    android:textColor="@color/_808080"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReverse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/imv_reverse_my_record" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/reverse"
                    android:textColor="@color/_808080"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/imv_share_my_record" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/share"
                    android:textColor="@color/_808080"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>